# rust-openai-gpt-tools

./: Dockerfile  README.md
package/: Cargo.toml
package/src/: lib.rs  main.rs
package/src/cache/: mod.rs
package/src/chat_completion/: mod.rs
package/src/embedding/: mod.rs
package/src/moderation/: mod.rs
package/src/service/: mod.rs
package/src/text_completion/: mod.rs
socket_ipc/: Cargo.toml
socket_ipc/src/ipc/: mod.rs
socket_ipc/src/ipc/socket/: mod.rs
