[package]
name = "rust-openai-gpt-tools"
authors = ["Philipp Schlütermann <philipp.schluetermann@udo.edu>"]
description = "summarization"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]
# https://doc.rust-lang.org/cargo/reference/cargo-targets.html
name = "rust_openai_gpt_tools"
path = "src/lib.rs"

[[bin]]
name = "rust_openai_gpt"
path = "src/main.rs"

[dependencies]
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
anyhow = "1.0"
bincode = "1.3.3"
rand = {version = "0.8.5"}
regex = {version = "1.6.0"}
lazy_static = {version = "1.4.0"}
rust-openai-gpt-tools-socket-ipc = {path = "../socket_ipc" }
tokio = { version="1.22.0", features = ["full"]}
reqwest = { version = "0.11.12", features = ["json"] }
linkify = "0.9.0"
itertools = "0.10.5"
sled = { version = "0.34.7", features = ["compression"] }
async-trait = "0.1.59"