[package]
name = "rust-openai-gpt-tools-socket-ipc"
authors = ["Philipp Schlütermann <philipp.schluetermann@udo.edu>"]
description = "UNIX Socket ICP"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]
# https://doc.rust-lang.org/cargo/reference/cargo-targets.html
name = "rust_openai_gpt_tools_socket_ipc"
path = "src/lib.rs"


[dependencies]
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
anyhow = "1.0"
bincode = "1.3.3"
tokio = { version="1.22.0", features = ["full"]}
async-trait = "0.1.59"

[features]
default = []